insighttoolkit4 (4.5.2-1otb2~@DIST@@PKGVERSION@) @DIST@; urgency=medium

  * Tests disabled on all platforms
  * FFTW enabled on all platforms

 -- OTB Team <contact@orfeo-toolbox.org>  Tue, 01 May 2014 21:57:44 +0200

insighttoolkit4 (4.5.2-1otb1~@DIST@@PKGVERSION@) @DIST@; urgency=medium

  * Python wrapping removed
  * On Quantal, Raring and Saucy, ITK is built against internal TIFF
    library because it does not work with version 4.0.2 of external
    TIFF library available on these Ubuntu versions.

 -- OTB Team <contact@orfeo-toolbox.org>  Wed, 30 Apr 2014 13:59:30 +0200

insighttoolkit4 (4.5.2-1) unstable; urgency=medium

  * New upstream.

  * patches/0001-BUG-Wrap-TransformFileReader-TransformFileWriter.patch:
  * patches/0002-COMP-Fixed-itkQuasiNewtonOptimizerv4-wrapping-warnin.patch:
  * patches/0003-COMP-Fixed-itkGradientDescentOptimizerv4-wrapping-wa.patch:
  * patches/0004-COMP-Warp-OptimizerParameterScalesEstimatorTemplate.patch:
    Remove; applied upstream.

 -- Steve M. Robbins <smr@debian.org>  Sun, 13 Apr 2014 07:31:59 -0500

insighttoolkit4 (4.5.1-1) unstable; urgency=medium

  [Gert Wollny]
  * new uptream
  * enable python2.7 bindings
  * update build dependencies to new wrapping method
  * Add linker flags --as-needed to reduce dependencies
  * make ITKGDCM a static library since it is only a dependency stub

  [ Steve M. Robbins ]
  * Merged Gert's patches to main trunk for release.

 -- Steve M. Robbins <smr@debian.org>  Sun, 30 Mar 2014 15:43:57 -0500

insighttoolkit4 (4.5.0-3) unstable; urgency=low

  * Team upload.
  * Prefer system install GDCM. Closes: #728121
  * Depends on dcmtk headers. Closes: #734590
  * Use Depends: libtiff-dev. Closes: #736128

 -- Mathieu Malaterre <malat@debian.org>  Wed, 12 Feb 2014 12:49:24 +0100

insighttoolkit4 (4.5.0-2) unstable; urgency=low

  * rules: Enable module ITKDCMTK (using system DCMTK).  Enable
    module Review (closes: #733602).
  * control.in: Build-depend on libdcmtk2-dev.