@@ -30,14 +30,11 @@ ifndef PKGVERSION
     PKGVERSION=1
 endif
 
-# ifeq ($(DEB_BUILD_ARCH),i386)
-#     ENABLE_FFTW = OFF
-#     # ITK tests are not reliables on 32 bits systems
-#     ENABLE_TESTING = OFF
-# else
-#     ENABLE_FFTW = ON
-#     ENABLE_TESTING = ON
-# endif
+ifeq ($(DEB_BUILD_ARCH),i386)
+    ENABLE_FFTW = OFF
+else
+    ENABLE_FFTW = ON
+endif
 
 ifeq ($(DIST),$(filter $(DIST), precise trusty))
     ENABLE_SYSTEM_TIFF = ON
@@ -55,10 +52,10 @@ CMAKE_FLAGS = \
 	-DCMAKE_EXPORT_COMPILE_COMMANDS:BOOL=ON \
 	-DCMAKE_SKIP_RPATH:BOOL=ON \
 	-DCMAKE_VERBOSE_MAKEFILE:BOOL=ON \
-	-DUSE_FFTWF:BOOL=ON \
-	-DITK_USE_FFTWD:BOOL=ON \
-	-DITK_USE_FFTWF:BOOL=ON \
-	-DITK_USE_SYSTEM_FFTW:BOOL=ON \
+	-DUSE_FFTWF:BOOL=$(ENABLE_FFTW) \
+	-DITK_USE_FFTWD:BOOL=$(ENABLE_FFTW) \
+	-DITK_USE_FFTWF:BOOL=$(ENABLE_FFTW) \
+	-DITK_USE_SYSTEM_FFTW:BOOL=$(ENABLE_FFTW) \
 	-DITK_USE_STRICT_CONCEPT_CHECKING:BOOL=ON \
 	-DITK_USE_SYSTEM_DCMTK:BOOL=ON \
 	-DITK_USE_SYSTEM_GDCM:BOOL=ON \
