@@ -1,7 +1,7 @@
 #!/bin/bash
 # Script to automate the Orfeo Toolbox library packaging for Ubuntu.
 #
-# Copyright (C) 2010-2013 CNES - Centre National d'Etudes Spatiales
+# Copyright (C) 2010-2014 CNES - Centre National d'Etudes Spatiales
 # by Sebastien DINOT <sebastien.dinot@c-s.fr>
 #
 # The OTB is distributed under the CeCILL license version 2. See files
@@ -12,7 +12,7 @@
 # http://www.cecill.info/licences/Licence_CeCILL_V2-fr.txt
 
 
-SCRIPT_VERSION="1.0"
+SCRIPT_VERSION="2.0"
 
 if [ -z "$DEBFULLNAME" ]; then
   DEBFULLNAME="OTB Team"
@@ -25,7 +25,7 @@ fi
 export DEBFULLNAME
 export DEBEMAIL
 
-TMPDIR="/tmp"
+TMPDIR=$(mktemp -d /tmp/otb.XXXXXX)
 DIRNAME=$(dirname $0)
 if [ "${DIRNAME:0:1}" == "/" ] ; then
     CMDDIR=$DIRNAME
@@ -34,7 +34,7 @@ elif [ "${DIRNAME:0:1}" == "." ] ; then
 else
     CMDDIR=$(pwd)/$DIRNAME
 fi
-DEBDIR=$CMDDIR/debian
+DEBDIR=$CMDDIR/debian.4
 DEFAULT_GPGKEYID=0xAEB3D22F
 
 
@@ -43,7 +43,7 @@ display_version ()
     cat <<EOF
 
 make_ubuntu_packages.sh, version ${SCRIPT_VERSION}
-Copyright (C) 2010-2013 CNES (Centre National d'Etudes Spatiales)
+Copyright (C) 2010-2014 CNES (Centre National d'Etudes Spatiales)
 by Sebastien DINOT <sebastien.dinot@c-s.fr>
 
 EOF
@@ -166,6 +166,10 @@ check_gpgkeyid ()
 set_ubuntu_code_name ()
 {
     case "$1" in
+        "trusty" )
+            ubuntu_codename="Trusty Tahr"
+            ubuntu_version="14.04"
+            ;;
         "saucy" )
             ubuntu_codename="Saucy Salamander"
             ubuntu_version="13.10"
@@ -182,32 +186,8 @@ set_ubuntu_code_name ()
             ubuntu_codename="Precise Pangolin"
             ubuntu_version="12.04"
             ;;
-        "oneiric" )
-            ubuntu_codename="Oneiric Ocelot"
-            ubuntu_version="11.10"
-            ;;
-        "natty" )
-            ubuntu_codename="Natty Narwhal"
-            ubuntu_version="11.04"
-            ;;
-        "maverick" )
-            ubuntu_codename="Maverick Meerkat"
-            ubuntu_version="10.10"
-            ;;
-        "lucid" )
-            ubuntu_codename="Lucid Lynx"
-            ubuntu_version="10.04 LTS"
-            ;;
-        "karmic" )
-            ubuntu_codename="Karmic Koala"
-            ubuntu_version="9.10"
-            ;;
-        "hardy" )
-            ubuntu_codename="Hardy Heron"
-            ubuntu_version="08.04 LTS"
-            ;;
         * )
-            echo "*** ERROR: Unknown Ubuntu version name"
+            echo "*** ERROR: Unknown or too old Ubuntu version"
             exit 4
             ;;
     esac
@@ -255,38 +235,23 @@ check_gpgkeyid
 
 echo "Archive export..."
 cd "$topdir"
-hg archive -r "$revision" -t tgz "$TMPDIR/otb-$otb_version_full.tar.gz"
+hg archive -r "$revision" -t tgz -p "otb-$otb_version_full" "$TMPDIR/otb_${otb_version_full}.orig.tar.gz"
 
 echo "Archive extraction..."
 cd "$TMPDIR"
-tar xzf "otb-$otb_version_full.tar.gz"
-mv "otb-$otb_version_full.tar.gz" "otb_$otb_version_full.orig.tar.gz"
+tar xzf "otb_${otb_version_full}.orig.tar.gz"
 
 echo "Debian scripts import..."
-cd "$TMPDIR/otb-$otb_version_full"
-cp -a "$DEBDIR" .
+cd "$TMPDIR/otb-${otb_version_full}"
+cp -a "$DEBDIR" debian
 cd debian
-for f in control rules ; do
-    sed -e "s/@VERSION_MAJOR@/$otb_version_major/g" \
-        -e "s/@VERSION_MINOR@/$otb_version_minor/g" \
-        -e "s/@VERSION_PATCH@/$otb_version_patch/g" \
-        -e "s/@VERSION_SONAME@/$otb_version_soname/g" \
-        -e "s/@VERSION_FULL@/$otb_version_full/g" \
-        < "$f.in" > "$f"
-    rm -f "$f.in"
-done
-for f in *VERSION_MAJOR* ; do
-    g=$(echo $f | sed -e "s/VERSION_MAJOR/$otb_version_major/g")
-    mv "$f" "$g"
-done
-for f in *VERSION_SONAME* ; do
-    g=$(echo $f | sed -e "s/VERSION_SONAME/$otb_version_soname/g")
-    mv "$f" "$g"
-done
+sed -e "s/@OTB_VERSION_SONAME@/${otb_version_soname}/g" < control.in > control
+rm -f control.in
 
 echo "Source package generation..."
-cd "$TMPDIR/otb-$otb_version_full"
-for target in saucy ; do
+cd "$TMPDIR/otb-${otb_version_full}"
+first_pkg=1
+for target in precise quantal saucy trusty ; do
     set_ubuntu_code_name "$target"
     echo "Package for $ubuntu_codename ($ubuntu_version)"
     cp -f "$DEBDIR/changelog" debian
@@ -296,7 +261,13 @@ for target in saucy ; do
         dch_message="Automated update for $ubuntu_codename ($ubuntu_version)."
     fi
     dch --force-distribution --distribution "$target" \
-        -v "${otb_version_full}-0ppa~${target}${pkg_version}" "$dch_message"
-    debuild -k$gpgkeyid -S -sa --lintian-opts -i
-    echo "You might want to run 'cp \"$TMPDIR/otb-$otb_version_full/debian/changelog\" \"$DEBDIR/changelog\"' and commit"
+        -v "${otb_version_full}-1otb~${target}${pkg_version}" "$dch_message"
+    if [ $first_pkg -eq 1 ] ; then
+        debuild -k$gpgkeyid -S -sa --lintian-opts -i
+        first_pkg=0
+    else
+        debuild -k$gpgkeyid -S --lintian-opts -i
+    fi
+    echo "OTB source package for Ubuntu $ubuntu_codename is available in $TMPDIR"
+    echo "You might want to run 'cp \"$TMPDIR/otb-${otb_version_full}/debian/changelog\" \"$DEBDIR/changelog\"' and commit"
 done
